--- a/atomos.html
+++ b/atomos.html
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-3 col-sm-12 col-md-12 col-lg-12 p-3 mb-4">
-                <h1 class="font-italic">Diseño Atómico</h1>
+                <h1 class="font-italic"><a href="index.html">Diseño Atómico </a></h1>
                 <span><a href="atomos.html">Átomos</a> | <a href="moleculas.html">Moléculas</a> | <a
                         href="organismos.html">Organismos</a> | <a href="plantillas.html">Plantillas</a> | <a
                         href="paginas.html">Páginas</a></span>
