--- a/plantillas.html
+++ b/plantillas.html
@@ -52,11 +52,15 @@
 </head>
 
 <body>
-    <div class="container  bg-color-muted-light p-3 mb-4">
-        <h1 class="font-italic"> <a href="index.html">Diseño Atómico </a></h1>
-        <span><a href="atomos.html">Átomos</a> | <a href="moleculas.html">Moléculas</a> | <a
-                href="organismos.html">Organismos</a> | <a href="plantillas.html">Plantillas</a> | <a
-                href="paginas.html">Páginas</a></span>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-3 col-sm-12 col-md-12 col-lg-12 p-3 mb-4">
+                <h1 class="font-italic"> <a href="index.html">Diseño Atómico </a></h1>
+                <span><a href="atomos.html">Átomos</a> | <a href="moleculas.html">Moléculas</a> | <a
+                        href="organismos.html">Organismos</a> | <a href="plantillas.html">Plantillas</a> | <a
+                        href="paginas.html">Páginas</a></span>
+            </div>
+        </div>
     </div>
 
     <hr>
@@ -105,7 +109,7 @@
 
     <div class="container">
         <div class="row justify-content-between">
-            <div class=" col-8">
+            <div class="col-xs-3 col-sm-12 col-md-12 col-lg-8">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleSlidesOnly" data-slide-to="0" class="active"></li>
@@ -154,7 +158,8 @@
                 </div>
             </div>
 
-            <div class=col-4>
+            
+            <div class="col-sm-12 col-md-12 col-lg-4">
                 <h2>Lorem ipsum, dolor sit amet consectetur adipisicing.</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo necessitatibus beatae eveniet
                     architecto possimus nesciunt velit iste, repellat harum ex atque rerum, assumenda qui obcaecati!
