--- a/paginas.html
+++ b/paginas.html
@@ -53,11 +53,15 @@
 </head>
 
 <body>
-    <div class="container  bg-color-muted-light p-3 mb-4">
-        <h1 class="font-italic"> <a href="index.html">Diseño Atómico </a></h1>
-        <span><a href="atomos.html">Átomos</a> | <a href="moleculas.html">Moléculas</a> | <a
-                href="organismos.html">Organismos</a> | <a href="plantillas.html">Plantillas</a> | <a
-                href="paginas.html">Páginas</a></span>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-3 col-sm-12 col-md-12 col-lg-12 p-3 mb-4">
+                <h1 class="font-italic"> <a href="index.html">Diseño Atómico </a></h1>
+                <span><a href="atomos.html">Átomos</a> | <a href="moleculas.html">Moléculas</a> | <a
+                        href="organismos.html">Organismos</a> | <a href="plantillas.html">Plantillas</a> | <a
+                        href="paginas.html">Páginas</a></span>
+            </div>
+        </div>
     </div>
 
     <hr>
@@ -107,13 +111,13 @@
 
     <div class="container">
         <div class="row justify-content-between">
-            <div class=" col-8">
+            <div class="col-xs-3 col-sm-12 col-md-12 col-lg-8">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleSlidesOnly" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleSlidesOnly" data-slide-to="1"></li>
                         <li data-target="#carouselExampleSlidesOnly" data-slide-to="2"></li>
-                        <li data-target="#carouselExampleSlidesOnly" data-slide-to="3"></li>
+                       
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -157,7 +161,7 @@
                 </div>
             </div>
 
-            <div class=col-4>
+            <div class="col-sm-12 col-md-12 col-lg-4">
                 <h2>Novela Visual y videojuego para Xbox 360</h2>
                 <p>La historia gira en torno a <a href="#"> Rintaro Okabe </a> que, junto a sus amigos Mayuri Shiina e
                     Itaru Hashida, descubre que ha creado por accidente una máquina capaz de enviar mensajes al pasado.
