--- a/moleculas.html
+++ b/moleculas.html
@@ -121,7 +121,7 @@
                             </div>
 
                             <div class="form-group form-check">
-                                <label class="form-check-label">
+                                <label class="form-check-label mr-sm-3">
                                     <input class="form-check-input" type="checkbox" name="remember" required> Recuérdame
                                 </label>
                             </div>
